--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(35, 177, 130);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,7 +28,7 @@ body {
   place-items: top;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #242424;
+  background-color: rgb(35, 177, 130);
 }
 
 h1 {
